--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,5 @@ jobs:
     - name: Push docker image
       run: |
         docker push samuelgalante/nlw_devops:${{ steps.generate_sha.outputs.sha }}
+        docker tag samuelgalante/nlw_devops:${{ steps.generate_sha.outputs.sha }} samuelgalante/nlw_devops:latest
+        dcoker push samuelgalante/nlw_devops:latest
