--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,4 @@ jobs:
       run: |
         docker push samuelgalante/nlw_devops:${{ steps.generate_sha.outputs.sha }}
         docker tag samuelgalante/nlw_devops:${{ steps.generate_sha.outputs.sha }} samuelgalante/nlw_devops:latest
-        dcoker push samuelgalante/nlw_devops:latest
+        docker push samuelgalante/nlw_devops:latest
